--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "AppiWhatsapp",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js"
+	"start": "node index.js"
   },
   "engines": {
     "node": "18.x"
@@ -14,7 +14,8 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.18.2",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "openai": "^3.2.1"
   },
   "devDependencies": {
     "@types/cors": "^2.8.13",
